[package]
name = "rust-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"]}
pangocairo = "*"
once_cell = "1.15.0"
log = "0.4"
log4rs = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
adw = { version = "0.2.0", package = "libadwaita" }

[[bin]]
name = "basic"
path = "src/main.rs"

[[bin]]
name = "event-loop"
path = "event_loop/main.rs"

[[bin]]
name = "settings"
path = "settings/main.rs"

[[bin]]
name = "list-widget"
path = "list_widget/main.rs"

[[bin]]
name = "string-list"
path = "string_list/main.rs"

[[bin]]
name = "hello_world"
path = "hello_world/main.rs"

[[bin]]
name = "composite_templates"
path = "composite_templates/main.rs"

[[bin]]
name = "todo"
path = "todo/main.rs"

[[bin]]
name = "actions"
path = "actions/main.rs"

[[bin]]
name = "picture"
path = "picture/main.rs"

[[bin]]
name = "reactions"
path = "reactions/main.rs"

[[bin]]
name = "pixbuf"
path = "pixbuf/main.rs"

[[bin]]
name = "action_composite_templates"
path = "action_composite_templates/main.rs"

[[bin]]
name = "tree_view"
path = "tree_view/main.rs"

[[bin]]
name = "drawing_area"
path = "drawing_area/main.rs"

[[bin]]
name = "cairo_threads"
path = "cairo_threads/main.rs"

[[bin]]
name = "font_icon"
path = "font_icon/main.rs"

[build-dependencies]
glib-build-tools = "0.16.0"
